--- a/Portal.html
+++ b/Portal.html
@@ -23,7 +23,7 @@
      </header>
 
      <div class="card">
-        <img src="C:/Users/SAHITHI REDDY/Desktop/CTS/card.jpg" alt="No image" style="width:100%">
+        <img src="card.jpg" alt="No image" style="width:100%">
         <div class="content">
             <button id="first"> PERSPECTIVES</button><br><br>
             <h4><b>8 tips for managing virtual teams</b></h4>
@@ -33,7 +33,7 @@
       </div>
       
       <div class="card2">
-        <img src="C:/Users/SAHITHI REDDY/Desktop/CTS/img.jpg" alt="No image" style="width:100%">
+        <img src="img.jpg" alt="No image" style="width:100%">
         
       </div>
 
